crates/reposix-core/tests/compile-fail/tainted_into_untainted.stderr
error[E0308]: mismatched types
  --> tests/compile-fail/tainted_into_untainted.rs:25:21
   |
25 |     takes_untainted(tainted);
   |     --------------- ^^^^^^^ expected `Untainted<Record>`, found `Tainted<Record>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Untainted<Record>`
              found struct `Tainted<Record>`
note: function defined here
  --> tests/compile-fail/tainted_into_untainted.rs:9:4
   |
 9 | fn takes_untainted(_: Untainted<Record>) {}
   |    ^^^^^^^^^^^^^^^ --------------------
